Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Create Your AI Agent"
+title: "Create Your AI Agen"
 description: "This guide walks you through the updated 3-step process to create an AI agent in Callin.io."
 ---
 
@@ -23,7 +23,7 @@ Begin by entering the core settings for your agent:
 <img
   src="/gifs/NCAG1.gif"
   alt="Step 1 - Agent Basic Settings"
-  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
 />
 
 ---
@@ -39,7 +39,7 @@ In this step, configure the language and select the voice that your agent will u
 <img
   src="/gifs/NCAG2.gif"
   alt="Step 2 - Voice & Language"
-  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
 />
 
 ---
@@ -60,5 +60,5 @@ Define how your agent behaves and responds during conversations:
 <img
   src="/gifs/NCAG3.gif"
   alt="Step 3 - Agent Prompt Configuration"
-  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
 />
