--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Create Your AI Agen"
+title: "Create Your AI Agent"
 description: "This guide walks you through the updated 3-step process to create an AI agent in Callin.io."
 ---
 
