--- a/Create-AI-Agent/Analytics-Integrations.mdx
+++ b/Create-AI-Agent/Analytics-Integrations.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Analyze Your Platform's Performance"
+title: "Analyze Your Platform's Performanc"
 description: "Get insights into your AI agent performance, call activity, and usage patterns with the built-in analytics dashboard."
 ---
 
@@ -23,8 +23,8 @@ These metrics are updated in real-time and compare data against the previous wee
 
 This dashboard empowers your team to make informed, data-driven decisions and improve service quality continuously.
 
-   <img
-   src="/gifs/analiticsg1.gif"
-   alt="Step 1 - Open AI Agents"
-   style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
-   />
+<img
+  src="/gifs/analiticsg1.gif"
+  alt="Step 1 - Open AI Agents"
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
+/>
