Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Personal-Numbers.mdx.mdx
+++ b/Create-AI-Agent/Personal-Numbers.mdx.mdx
@@ -20,7 +20,7 @@ Adding a **Personal Number** allows your AI agents to use your own phone number 
 ---
 
 <img
-   src="/gifs/personalnumber1.gif"
+   src="/gifs/AMN.gif"
    alt="Add Personal Number and Verification"
    style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
 />
