Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Call-Actions.mdx
+++ b/Create-AI-Agent/Call-Actions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "View and Manage Your Call History"
+title: "Call History"
 description: "In this section, you’ll find a detailed overview of all inbound and outbound calls made through your Callin.io AI agents."
 ---
 
