--- a/Create-AI-Agent/Configure-Numbers.mdx
+++ b/Create-AI-Agent/Configure-Numbers.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Configure Your Numbers"
+title: "Numbers"
 description: "Set up or import phone numbers to connect with your AI agents in Callin.io."
 ---
+
 In this section, you’ll learn how to **set up** or **import** phone numbers into your Callin.io platform. These numbers are essential for enabling outbound and inbound call capabilities for your AI agents.
 
 ### Option 1: Purchase a Number
@@ -25,10 +26,8 @@ In this section, you’ll learn how to **set up** or **import** phone numbers in
 
 Once added, the numbers will be available for assignment to your agents and campaigns.
 
-   <img
-   src="/gifs/cyng1.gif"
-   alt="Configure Numbers Flow"
-   style={{ borderRadius: '12px', maxWidth: '100%', marginTop: '1rem', marginBottom:      '1rem' }}
-   />
-
-
+<img
+  src="/gifs/cyng1.gif"
+  alt="Configure Numbers Flow"
+  style={{ borderRadius:"12px",maxWidth:"100%",marginTop:"1rem",marginBottom:"1rem" }}
+/>
