--- a/Create-AI-Agent/Voice-Greetings.mdx
+++ b/Create-AI-Agent/Voice-Greetings.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Customize Voice & Greetings"
+title: "Voices"
 description: "Learn how to record or upload a custom voice sample for your AI agent. This guide walks you through the voice cloning process in Callin.io."
 ---
 
@@ -28,5 +28,5 @@ This process is crucial to creating a realistic and personalized AI voice that r
 <img
   src="/gifs/voiceg1.gif"
   alt="Step 1 - Open AI Agents"
-  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
 />
