--- a/Create-AI-Agent/Analytics-Integrations.mdx
+++ b/Create-AI-Agent/Analytics-Integrations.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Analyze Your Platform's Performance"
+title: "Analitycs"
 description: "Get insights into your AI agent performance, call activity, and usage patterns with the built-in analytics dashboard."
 ---
 
