--- a/Create-AI-Agent/Personal-Numbers.mdx
+++ b/Create-AI-Agent/Personal-Numbers.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Add Your Personal Phone Number"
+title: "Personal Numbers"
 description: "This guide explains how to add and verify a personal number for outbound calls in Callin.io."
 ---
 
@@ -8,7 +8,7 @@ Adding a **Personal Number** allows your AI agents to use your own phone number 
 ### Step-by-step Process:
 
 1. Go to the **Personal Numbers** tab on the left-hand menu.
-2. Click **+ Add Personal Number**.
+2. Click **\+ Add Personal Number**.
 3. Enter your number and select the country code.
 4. Follow the **verification process**:
    - You’ll receive a call from Twilio.
@@ -20,7 +20,7 @@ Adding a **Personal Number** allows your AI agents to use your own phone number 
 ---
 
 <img
-   src="/gifs/AMN.gif"
-   alt="Add Personal Number and Verification"
-   style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+  src="/gifs/AMN.gif"
+  alt="Add Personal Number and Verification"
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
 />
