Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Actions.mdx
+++ b/Create-AI-Agent/Actions.mdx
@@ -1,4 +1,46 @@
 ---
-title: "Actions"
-description: "Description of your new file."
+title: Actions
+description: Learn how to connect Callin.io with external platforms like Google Calendar, Slack, and Make.com.
 ---
+
+# Connect Callin.io with External Services
+
+Callin.io allows seamless integration with popular third-party tools to enhance automation, communication, and scheduling. Below is a list of all available integration options you can configure from the **Actions** section.
+
+## Available Integrations
+
+### 📅 Calendar
+
+- **Google Calendar**  
+  Automatically schedule calls and manage appointments based on your Google Calendar.
+
+- **Outlook Calendar**  
+  Sync your Microsoft Outlook calendar to align call schedules and availability.
+
+### 🔄 Automation
+
+- **Make.com**  
+  Create powerful automated workflows with Make to trigger actions after calls or other events.
+
+- **Zapier**  
+  Connect Callin.io with 3000+ applications using Zapier's automation capabilities.
+
+### 🧠 CRM / Communication
+
+- **Zoho CRM**  
+  Connect your customer data and manage interactions directly from Zoho.
+
+- **Slack**  
+  Receive call notifications and full call transcripts directly into your Slack channels.
+
+- **Microsoft Teams**  
+  Integrate call actions with your Teams workspace.
+
+### 🛠️ Custom Integration
+
+- **API Access**  
+  Build your own custom workflows using the Callin.io public API for full flexibility.
+
+---
+
+> 💡 Tip: All integrations require user authentication and authorization. Click the **Connect** button next to each service to begin the setup process.
