--- a/Create-AI-Agent/Knowledge-Base.mdx
+++ b/Create-AI-Agent/Knowledge-Base.mdx
@@ -1,5 +1,31 @@
 ---
-title: 'Knowledge-Base'
-description: 'Description of your new file.'
+title: Knowledge Base
+description: Upload documents and files to your AI agent's knowledge base to improve responses.
 ---
+
+## Knowledge Base
+
+The Knowledge Base is where you upload reference documents to help your AI agent provide more accurate and contextual answers during conversations.
+
+### What You Can Upload
+
+You can add various types of files, such as:
+
+- PDFs
+- Word documents
+- PowerPoint presentations
+- Plain text files
+- Markdown files
+
+These documents will be indexed and used by your AI agent to understand your services, products, or any relevant material.
+
+### How to Add Files
+
+1. Click **Add Files** in the top-right corner.
+2. Select the documents you want to upload.
+3. Wait for the system to index the content.
+4. Once indexed, the content becomes part of the AI's knowledge base.
+
+> 📌 Tip: The more high-quality documentation you upload, the better your AI agent can respond to complex user queries.
+
 
