--- a/Create-AI-Agent/WhatsApp.mdx
+++ b/Create-AI-Agent/WhatsApp.mdx
@@ -1,5 +1,24 @@
 ---
-title: 'WhatsApp'
-description: 'Description of your new file.'
+title: WhatsApp
+description: Connect your WhatsApp account to enable automated conversations with AI agents.
 ---
 
+## WhatsApp Integration
+
+Integrate your WhatsApp account to enable AI-driven conversations via the world’s most popular messaging app.
+
+### How it Works
+
+Once connected, your AI agents will be able to send and receive messages through your linked WhatsApp number. This allows you to:
+
+- Automate responses to customer inquiries.
+- Send follow-ups, confirmations, or notifications.
+- Use WhatsApp as a seamless support channel.
+
+### Setup Process
+
+1. Click the **Connect WhatsApp** button in the Callin.io dashboard.
+2. Enter your WhatsApp number and follow the on-screen authentication process.
+3. Once verified, your WhatsApp account will appear as connected.
+
+> This feature is currently in **beta**. If you encounter any issues, please contact [support@callin.io](mailto:support@callin.io).
