Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Settings.mdx
+++ b/Create-AI-Agent/Settings.mdx
@@ -1,5 +1,41 @@
 ---
-title: 'Setting'
-description: 'Description of your new file.'
+title: Settings
+description: Configure notifications, privacy preferences, localization, and call settings for your Callin.io account.
 ---
+
+## Settings
+
+Manage your account's general preferences to personalize how Callin.io works for you and your team.
+
+### Notifications
+
+Control where and how you receive alerts from Callin.io:
+
+- **Email Notifications** – Get alerts in your inbox.
+- **SMS Notifications** – Receive text message updates.
+- **Desktop Notifications** – Enable real-time alerts on your device.
+
+### Privacy
+
+Decide how your usage data is handled:
+
+- **Share Analytics** – Help improve the platform by sharing anonymized data.
+- **Marketing Communications** – Choose whether to receive updates and offers.
+
+### Localization
+
+Adjust the interface and communication preferences:
+
+- **Timezone** – Select the timezone for your account.
+- **Language** – Choose your preferred language.
+
+### Call Settings
+
+Configure key options related to AI calls:
+
+- **Maximum Call Duration** – Set the time limit (in seconds) for each call.
+- **Call Recording** – Enable or disable audio recording of calls.
+
+> 💡 These settings apply to all agents under your account unless overridden individually.
+
 
