--- a/Automations/Make/Intro.mdx
+++ b/Automations/Make/Intro.mdx
@@ -68,3 +68,8 @@ You now have a complete automation that:
 
 This automation runs continuously in the background, saving time and ensuring every interaction is logged and actionable.
 
+<img
+  src="/gifs/cyng1.gif"
+  alt="Configure Numbers Flow"
+  style={{ borderRadius:"12px",maxWidth:"100%",marginTop:"1rem",marginBottom:"1rem" }}
+/>
