--- a/Automations/Make/Intro.mdx
+++ b/Automations/Make/Intro.mdx
@@ -69,7 +69,7 @@ You now have a complete automation that:
 This automation runs continuously in the background, saving time and ensuring every interaction is logged and actionable.
 
 <img
-  src="/gifs/WorkFlow_Make.gif"
-  alt="Configure Numbers Flow"
+  src="/gifs/wfmake.gif"
+  alt="Make WorkFlow"
   style={{ borderRadius:"12px",maxWidth:"100%",marginTop:"1rem",marginBottom:"1rem" }}
 />
