Documentation edits made through Mintlify web editor

--- a/Automations/Make/Intro.mdx
+++ b/Automations/Make/Intro.mdx
@@ -68,8 +68,11 @@ You now have a complete automation that:
 
 This automation runs continuously in the background, saving time and ensuring every interaction is logged and actionable.
 
-<img
-  src="/gifs/wfmake.gif"
-  alt="Make WorkFlow"
-  style={{ borderRadius:"12px",maxWidth:"100%",marginTop:"1rem",marginBottom:"1rem" }}
+<video
+  src="/gifs/wfmake.mp4"
+  autoplay
+  loop
+  muted
+  playsInline
+  style={{ borderRadius: "12px", maxWidth: "100%", marginTop: "1rem", marginBottom: "1rem" }}
 />
