Documentation edits made through Mintlify web editor

--- a/Automations/Make/Intro.mdx
+++ b/Automations/Make/Intro.mdx
@@ -68,11 +68,8 @@ You now have a complete automation that:
 
 This automation runs continuously in the background, saving time and ensuring every interaction is logged and actionable.
 
-<video
-  src="/gifs/wfmake.mp4"
-  autoplay
-  loop
-  muted
-  playsInline
-  style={{ borderRadius: "12px", maxWidth: "100%", marginTop: "1rem", marginBottom: "1rem" }}
+<img
+  src="/gifs/wfmake.gif"
+  alt="Step 1 - Agent Basic Settings"
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
 />
