Documentation edits made through Mintlify web editor

--- a/Automations/Make/Intro.mdx
+++ b/Automations/Make/Intro.mdx
@@ -69,7 +69,7 @@ You now have a complete automation that:
 This automation runs continuously in the background, saving time and ensuring every interaction is logged and actionable.
 
 <img
-  src="/gifs/wfmake.gif"
+  src="/gifs/WFmake.gif"
   alt="Step 1 - Agent Basic Settings"
   style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
 />
