Documentation edits made through Mintlify web editor

--- a/Automations/Zapier/Zapier-Intro.mdx
+++ b/Automations/Zapier/Zapier-Intro.mdx
@@ -86,3 +86,9 @@ Searches and updates the lead record with:
 - Zapier allows full customization of conditions and logic.
 - Callin.io must have tasks and webhooks configured properly.
 - WhatConverts serves as the central hub for lead tracking.
+
+<img
+  src="/gifs/WFzapier.gif"
+  alt="Step 1 - Agent Basic Settings"
+  style={{ borderRadius:"12px",maxWidth:"100%",marginBottom:"1rem" }}
+/>
