--- a/Automations/Zapier/Zapier-Intro.mdx
+++ b/Automations/Zapier/Zapier-Intro.mdx
@@ -1,8 +1,4 @@
----
-title: "AI Call Automation using WhatConverts, Zapier, and Callin.io"
----
-
-# AI Call Automation using WhatConverts, Zapier, and Callin.io
+# Automating AI Calls with WhatConverts, Zapier, and Callin.io
 
 This guide provides a step-by-step explanation of how to automate outbound calls with an AI agent using WhatConverts as the lead source, Zapier as the automation engine, and Callin.io as the call platform. It also describes how to handle the post-call workflow via webhook and automate follow-up actions like sending emails, creating calendar events, and updating the lead in the CRM.
 
